--- a/project/package.json
+++ b/project/package.json
@@ -24,12 +24,13 @@
     "@tsparticles/shape-text": "^3.8.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "motion": "^12.23.6",
+    "motion": "^12.23.12",
     "next": "15.1.7",
     "next-pwa": "^5.6.0",
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pageflip": "^2.0.3",
     "swiper": "^11.2.4",
     "use-media": "^1.5.0",
     "zustand": "^5.0.3"
