--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
     "@tsparticles/shape-text": "^3.8.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "motion": "^12.23.12",
     "next": "15.1.7",
     "next-pwa": "^5.6.0",
